--- a/kitchen.yml
+++ b/kitchen.yml
@@ -104,81 +104,84 @@ platforms:
 #       Debug: Executing: 'ps -ef'
 #       Error: /Service[datadog-agent]: Failed to call refresh: Execution of 'ps -ef' returned 1: Error: Could not execute posix command: No such file or directory - ps
 #       Error: /Service[datadog-agent]: Execution of 'ps -ef' returned 1: Error: Could not execute posix command: No such file or directory - ps
-#- name: centos-stream9-puppet-8
-#  driver:
-#    image: 'quay.io/centos/centos:stream9'
-#    platform: centosstream
-#    docker_platform: linux/amd64
-#    use_sudo: true
-#    privileged: true
-#    provision_command:
-#    - rpm -Uvh https://yum.puppet.com/puppet8-release-el-9.noarch.rpm #installs the puppet-agent repo
-#    - yum install -y puppet-agent rubygems ruby-devel
-#    - dnf group install -y "Development Tools"
-#    - ln -s /opt/puppetlabs/bin/puppet /usr/bin/puppet
-#
-#    - mkdir /home/kitchen/puppet -p
-#    - printf <%= File.read('environments/etc/Puppetfile').inspect %> > /home/kitchen/puppet/Puppetfile
-#    - printf <%= File.read('environments/etc/Gemfile').inspect %> > /home/Gemfile
-#
-#    - gem install bundler -v '= 2.4.13'
-#    # we use bundle to install gems and to lock dependencies versions of semantic_puppet and multipart-post
-#    - cd /home && bundle install
-#    - cd /home/kitchen/puppet && r10k puppetfile install --moduledir=/tmp/modules
+- name: centos-stream9-puppet-8
+  driver:
+    image: 'trfore/docker-centos9-systemd'
+    platform: centosstream
+    docker_platform: linux/amd64
+    use_sudo: true
+    privileged: true
+    run_options: --cgroupns=host --tmpfs=/run --tmpfs=/tmp --volume=/sys/fs/cgroup:/sys/fs/cgroup:rw
+    provision_command:
+    # - dnf module -y reset ruby
+    # - dnf module -y enable ruby:3.1
+    # - dnf module -y install ruby:3.1/common
 
+    - rpm -Uvh https://yum.puppet.com/puppet8-release-el-9.noarch.rpm #installs the puppet-agent repo
+    - yum install -y puppet-agent-8.10.0 rubygems ruby-devel procps-ng
+    - dnf group install -y "Development Tools"
+    - ln -s /opt/puppetlabs/bin/puppet /usr/bin/puppet
 
-# TODO: validate module support for Rocky Linux
-#       Debug: Service[datadog-agent](provider=base): Executing 'ps -ef'
-#       Debug: Executing: 'ps -ef'
-#       Error: /Service[datadog-agent]: Could not evaluate: Execution of 'ps -ef' returned 1: Error: Could not execute posix command: No such file or directory - ps
-#       Debug: Service[datadog-agent](provider=base): Executing 'ps -ef'
-#       Debug: Executing: 'ps -ef'
-#       Error: /Service[datadog-agent]: Failed to call refresh: Execution of 'ps -ef' returned 1: Error: Could not execute posix command: No such file or directory - ps
-#       Error: /Service[datadog-agent]: Execution of 'ps -ef' returned 1: Error: Could not execute posix command: No such file or directory - ps
-#- name: rocky-9-puppet-8
-#  driver:
-#    image: 'rockylinux:9.3'
-#    platform: centosstream # kitchen-docker has issues installing packages otherwises
-#    provision_command:
-#    - dnf install -y https://yum.puppet.com/puppet8-release-el-9.noarch.rpm #installs the puppet-agent repo
-#    - dnf install -y puppet-agent rubygems ruby-devel
-#    - dnf group install -y "Development Tools"
-#    - ln -s /opt/puppetlabs/bin/puppet /usr/bin/puppet
-#
-#    - mkdir /home/kitchen/puppet
-#    - printf <%= File.read('environments/etc/Puppetfile').inspect %> > /home/kitchen/puppet/Puppetfile
-#    - printf <%= File.read('environments/etc/Gemfile').inspect %> > /home/Gemfile
-#
-#    - gem install bundler -v '= 2.4.13'
-#
-#    - cd /home && bundle install
-#    - cd /home/kitchen/puppet && r10k puppetfile install --moduledir=/tmp/modules
+    - mkdir /home/kitchen/puppet -p
+    - printf <%= File.read('environments/etc/Puppetfile').inspect %> > /home/kitchen/puppet/Puppetfile
+    - printf <%= File.read('environments/etc/Gemfile').inspect %> > /home/Gemfile
 
-# - name: opensuse/leap-15
-#     # Workaround for flakes on initializing opensuse/leap-15:
-#   # => SCP did not finish successfully (255):  (Net::SCP::Error)
-#   transport:
-#     max_ssh_sessions: 1
-#   driver_config:
-#     # we use a custom image that runs systemd
-#     image: 'datadog/docker-library:chef_kitchen_systemd_opensuse_leap_15'
-#     run_command: /root/start.sh
-#   driver:
-#     provision_command:
-#       - zypper ar -G https://yum.puppet.com/puppet/sles/15/x86_64/ puppet-repo
-#       - zypper install -y puppet-agent ruby=2.5
-#       - gem install bundler -v '= 1.17.3'
-#       - gem install net-ssh -v '= 6.1.0'
-#       - gem install rspec-its -v '= 1.3.1'
-#       - gem install serverspec rspec
-#       - ln -s /usr/bin/rspec.ruby2.5 /usr/bin/rspec
-#       - ln -s /opt/puppetlabs/puppet/bin/puppet /usr/bin/puppet
-#       - mkdir /home/kitchen/puppet
-#       - printf <%= File.read('environments/etc/Puppetfile').inspect %> > /home/kitchen/puppet/Puppetfile
-#       - printf <%= File.read('environments/etc/Gemfile').inspect %> > /home/Gemfile
+    - gem install bundler -v '= 2.4.13'
+    # we use bundle to install gems and to lock dependencies versions of semantic_puppet and multipart-post
+    - cd /home && bundle install
+    - cd /home/kitchen/puppet && r10k puppetfile install --moduledir=/tmp/modules
+    # TODO: validate module support for Rocky Linux
+    #       Debug: Service[datadog-agent](provider=base): Executing 'ps -ef'
+    #       Debug: Executing: 'ps -ef'
+    #       Error: /Service[datadog-agent]: Could not evaluate: Execution of 'ps -ef' returned 1: Error: Could not execute posix command: No such file or directory - ps
+    #       Debug: Service[datadog-agent](provider=base): Executing 'ps -ef'
+    #       Debug: Executing: 'ps -ef'
+    #       Error: /Service[datadog-agent]: Failed to call refresh: Execution of 'ps -ef' returned 1: Error: Could not execute posix command: No such file or directory - ps
+    #       Error: /Service[datadog-agent]: Execution of 'ps -ef' returned 1: Error: Could not execute posix command: No such file or directory - ps
+    #- name: rocky-9-puppet-8
+    #  driver:
+    #    image: 'rockylinux:9.3'
+    #    platform: centosstream # kitchen-docker has issues installing packages otherwises
+    #    provision_command:
+    #    - dnf install -y https://yum.puppet.com/puppet8-release-el-9.noarch.rpm #installs the puppet-agent repo
+    #    - dnf install -y puppet-agent rubygems ruby-devel
+    #    - dnf group install -y "Development Tools"
+    #    - ln -s /opt/puppetlabs/bin/puppet /usr/bin/puppet
+    #
+    #    - mkdir /home/kitchen/puppet
+    #    - printf <%= File.read('environments/etc/Puppetfile').inspect %> > /home/kitchen/puppet/Puppetfile
+    #    - printf <%= File.read('environments/etc/Gemfile').inspect %> > /home/Gemfile
+    #
+    #    - gem install bundler -v '= 2.4.13'
+    #
+    #    - cd /home && bundle install
+    #    - cd /home/kitchen/puppet && r10k puppetfile install --moduledir=/tmp/modules
 
-#       - cd /home && bundle.ruby2.5 install
-#       - cd /home/kitchen/puppet && r10k puppetfile install --moduledir=/tmp/modules
+    # - name: opensuse/leap-15
+    #     # Workaround for flakes on initializing opensuse/leap-15:
+    #   # => SCP did not finish successfully (255):  (Net::SCP::Error)
+    #   transport:
+    #     max_ssh_sessions: 1
+    #   driver_config:
+    #     # we use a custom image that runs systemd
+    #     image: 'datadog/docker-library:chef_kitchen_systemd_opensuse_leap_15'
+    #     run_command: /root/start.sh
+    #   driver:
+    #     provision_command:
+    #       - zypper ar -G https://yum.puppet.com/puppet/sles/15/x86_64/ puppet-repo
+    #       - zypper install -y puppet-agent ruby=2.5
+    #       - gem install bundler -v '= 1.17.3'
+    #       - gem install net-ssh -v '= 6.1.0'
+    #       - gem install rspec-its -v '= 1.3.1'
+    #       - gem install serverspec rspec
+    #       - ln -s /usr/bin/rspec.ruby2.5 /usr/bin/rspec
+    #       - ln -s /opt/puppetlabs/puppet/bin/puppet /usr/bin/puppet
+    #       - mkdir /home/kitchen/puppet
+    #       - printf <%= File.read('environments/etc/Puppetfile').inspect %> > /home/kitchen/puppet/Puppetfile
+    #       - printf <%= File.read('environments/etc/Gemfile').inspect %> > /home/Gemfile
+
+    #       - cd /home && bundle.ruby2.5 install
+    #       - cd /home/kitchen/puppet && r10k puppetfile install --moduledir=/tmp/modules
 
 suites:
 - name: dd-agent
