--- a/kitchen.yml
+++ b/kitchen.yml
@@ -42,7 +42,7 @@ platforms:
     - wget https://apt.puppet.com/puppet8-release-jammy.deb
     - dpkg -i puppet8-release-jammy.deb #installs the puppet-agent repo
     - apt-get update
-    - apt-get install -y puppet-agent-8.10.0-1 rubygems ruby-dev make gcc
+    - apt-get install -y puppet-agent rubygems ruby-dev make gcc
     - ln -s /opt/puppetlabs/bin/puppet /usr/bin/puppet
 
     - mkdir /home/kitchen/puppet -p
@@ -129,31 +129,37 @@ platforms:
     - cd /home && bundle install
     - cd /home/kitchen/puppet && r10k puppetfile install --moduledir=/tmp/modules
 
-#     - name: opensuse/leap-15
-#         # Workaround for flakes on initializing opensuse/leap-15:
-#       # => SCP did not finish successfully (255):  (Net::SCP::Error)
-#       transport:
-#         max_ssh_sessions: 1
-#       driver_config:
-#         # we use a custom image that runs systemd
-#         image: 'datadog/docker-library:chef_kitchen_systemd_opensuse_leap_15'
-#         run_command: /root/start.sh
-#       driver:
-#         provision_command:
-#           - zypper ar -G https://yum.puppet.com/puppet/sles/15/x86_64/ puppet-repo
-#           - zypper install -y puppet-agent ruby=2.5
-#           - gem install bundler -v '= 1.17.3'
-#           - gem install net-ssh -v '= 6.1.0'
-#           - gem install rspec-its -v '= 1.3.1'
-#           - gem install serverspec rspec
-#           - ln -s /usr/bin/rspec.ruby2.5 /usr/bin/rspec
-#           - ln -s /opt/puppetlabs/puppet/bin/puppet /usr/bin/puppet
-#           - mkdir /home/kitchen/puppet
-#           - printf <%= File.read('environments/etc/Puppetfile').inspect %> > /home/kitchen/puppet/Puppetfile
-#           - printf <%= File.read('environments/etc/Gemfile').inspect %> > /home/Gemfile
+#- name: opensuse/leap-15
+#  # Workaround for flakes on initializing opensuse/leap-15:
+#  # => SCP did not finish successfully (255):  (Net::SCP::Error)
+#  transport:
+#    max_ssh_sessions: 1
+#  driver_config:
+#    # we use a custom image that runs systemd
+#    image: 'datadog/docker-library:chef_kitchen_systemd_opensuse_leap_15'
+#    docker_platform: linux/amd64
+#    run_command: /root/start.sh
+#  driver:
+#    provision_command:
+#      - zypper ar -G https://yum.puppet.com/puppet/sles/15/x86_64/ puppet-repo
+#      - zypper refresh
+#      - zypper install -y puppet-agent
+#      - export PATH="/opt/puppetlabs/puppet/bin:$PATH"
+#      - ruby -v
+#      - puppet --version
 #
-#           - cd /home && bundle.ruby2.5 install
-#           - cd /home/kitchen/puppet && r10k puppetfile install --moduledir=/tmp/modules
+#      - gem install bundler -v '= 1.17.3'
+#      - gem install net-ssh -v '= 6.1.0'
+#      - gem install rspec-its -v '= 1.3.1'
+#      - gem install serverspec rspec
+#      - ln -s /usr/bin/rspec.ruby2.7 /usr/bin/rspec
+#      - ln -s /opt/puppetlabs/puppet/bin/puppet /usr/bin/puppet
+#      - mkdir /home/kitchen/puppet
+#      - printf <%= File.read('environments/etc/Puppetfile').inspect %> > /home/kitchen/puppet/Puppetfile
+#      - printf <%= File.read('environments/etc/Gemfile').inspect %> > /home/Gemfile
+#
+#      - cd /home && bundle.ruby2.7 install
+#      - cd /home/kitchen/puppet && r10k puppetfile install --moduledir=/tmp/modules
 
 suites:
 - name: dd-agent
